minor backup file improvements